# owlwisetrader

./: README.md
container_tigerbeetle/: docker-compose.yml
container_timescaledb/: Dockerfile
owlwise_trader/: Cargo.toml
owlwisetrader_engine/: Cargo.toml
owlwisetrader_engine/barter-data-rs/: Cargo.toml
owlwisetrader_engine/barter-execution-rs/: Cargo.toml
owlwisetrader_engine/barter-rs/: Cargo.toml
owlwisetrader_engine/strategy/: Cargo.toml
owlwisetrader_engine/strategy/src/: main.rs  rsi.rs
