[package]
name = "owlwisetrader_strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barter = { path = "../barter-rs" }
barter-data = { path = "../barter-data-rs" }

# SerDe
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

# Technical Analysis
ta = "0.5.0"

# Misc
chrono = {version = "0.4.21", features = ["serde"]}

